[package]
name = "nullstrap"
version = "0.1.0"
description = "cross-platform Roblox bootstrapper"
authors = ["Proton Interactive"]
edition = "2021"

[lib]
name = "nullstrap_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon" ] }
tauri-plugin-opener = "2"
tauri-plugin-window-state = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sysinfo = "0.30"
regex = "1"
dirs = "5"
tauri-plugin-drpc = "0.1.6"
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
raw-window-handle = "0.6"
reqwest = { version = "0.13.1", features = ["json", "blocking"] }
zip = "7.4.0"
tauri-plugin-single-instance = "2.4.0"
tauri-plugin-http = "2.5.7"
tauri-plugin-os = "2.3.2"
toml = "0.9.8"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.52", features = ["Win32_Foundation", "Win32_UI_WindowsAndMessaging", "Win32_Graphics_Dwm"] }
